close buttons on ie11 fix

--- a/src/scss/components/basketMenu/basketMenu.scss
+++ b/src/scss/components/basketMenu/basketMenu.scss
@@ -108,5 +108,6 @@
     position: absolute;
     right: $base-unit;
     top: $space;
+    height: 20px;
   }
 }
