--- a/src/scss/components/header/mainBar.scss
+++ b/src/scss/components/header/mainBar.scss
@@ -66,8 +66,10 @@
         }
         .btn__close {
           position: absolute;
-          top: 15px;
+          top: 7px;
           right: 15px;
+          height: 20px;
+
           @media (min-width: 1100px) {
             display: none;
           }
